--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,11 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>ようこそ　Bookers へ！</h1>
+
+<div class="start-text">
+  <p>
+    Bookersでは、さまざまな書籍に関するあなたの意見や<br>
+    印象を共有し交換することができます
+  </p>
+
+  <a href="https://bookers-level1.herokuapp.com/books">start</a>
+<!--表記link_to?これだとアプリ内完結になるのか？-->
+</div>
